# rust-in-motion

./: .gitignore  README.md
linguistics/: Cargo.toml
linguistics/src/: main.rs
myproject/: Cargo.toml
myproject/src/: borrowing.rs  error_handling.rs  lifetimes.rs  main.rs  syntax.rs
myproject/src/borrowing/: bucket.rs  car_pool.rs  drop_trait.rs  socket_ownership.rs
myproject/src/borrowing/patterns/: entry_api.rs  new_scopes.rs  splitting_up_structs.rs  temporary_variables.rs
myproject/src/error_handling/: box_error.rs  custom_error_types.rs  door.rs  json_results.rs  platform.rs  save_status.rs  using_failure.rs  using_quick_error.rs  vec_last_option.rs
myproject/src/lifetimes/: generics.rs  references_in_hashmap.rs
myproject/src/syntax/: hockey.rs
simulator/: Cargo.toml
simulator/src/: main.rs
